# libNumberToWords

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/appveyor/: build_library.bat  extract_archives.bat
ci/travis/: build_library.sh  extract_archives.sh
cmake/: numbertowords-config-version.cmake.in  numbertowords-config.cmake.in
docs/: Doxyfile.in  NumberToWords.xcf
docs/references/: Banque de dépannage linguistique - - Règles générales d'écriture et de lecture des nombres.url  Banque de dépannage linguistique - Trait d'union dans les numéraux.url  Bibliothèque virtuelle Le trait d'union et la soudure.url  Bibliothèque virtuelle Les règles d'accord et d'écriture des nombres.url  Le Conjugueur - Les nombres.url  Les nombres en lettres - Le Conjugueur.url
include/numbertowords/: EnglishTextGenerator.h  FrenchTextGenerator.h  FrenchTextGenerator.h.bak  ITextGenerator.h  numbertowords.h
src/numbertowords/: CMakeLists.txt  EnglishTextGenerator.cpp  FrenchTextGenerator.cpp  ITextGenerator.cpp  config.h.in  numbertowords.cpp  version.h.in
test/: CMakeLists.txt  TestBasicString.cpp  TestBasicString.h  TestEnglish.cpp  TestEnglish.h  TestFrench.cpp  TestFrench.h  main.cpp
test/french/: README.md
test/test_files/: IntegerToLetters.bas  README.md
